meegotouchhome (0.22.1~1) unstable; urgency=low

  * [UNRELEASED]

 -- Aki Koskinen <aki.koskinen@nokia.com>  Mon, 27 Sep 2010 18:27:03 +0300

meegotouchhome (0.22.0-1) unstable; urgency=low

  * Implemented: SWP#DUI-3338 Rename duihome to follow MeeGo component naming convention.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 27 Sep 2010 18:26:01 +0300

duihome (0.21.22-1) unstable; urgency=low

  * Fixes: NB#190663 - aspect ratio of the clock is not maintained when minimised

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 23 Sep 2010 18:54:04 +0300

duihome (0.21.21-1) unstable; urgency=low

  * Fixes: NB#187573 - duihome eating CPU at the background when panning foreground application
  * Fixes: NB#189334 - Launcher startup indicator updated too often

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 16 Sep 2010 17:06:00 +0300

duihome (0.21.20-1) unstable; urgency=low

  * The stubs are now included with the -dev package

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 08 Sep 2010 15:34:48 +0300

duihome (0.21.19-1) unstable; urgency=low

  * Implemented: SWP#DUI-2406 Progress of installation and update of applications indicated in launcher
  * Implemented: SWP#DUI-2010 Switching between switcher overview and detail view
  * Fixes: NB#187700 - Minimal horizontal finger move over the icon causes launcher page turn when trying to launch an application

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 6 Sep 2010 17:35:51 +0300

duihome (0.21.18-1) unstable; urgency=low

  * Implemented: SWP#DUI-3433 Apply switcher transitions
  * Implemented: SWP#DUI-2415 Automatic opening of search client when typing text on HW keyboard
  * Implemented: SWP#DUI-2416 Automatic opening of call UI when typing numbers on HW keyboard
  * Separated most of the code to a shared library

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 31 Aug 2010 13:29:00 +0300

duihome (0.21.17-1) unstable; urgency=low
